--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Deploy React App to Surge
+name: Deploy Website
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -19,21 +19,13 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-    
+
+    # Runs a single command using the runners shell
     - name: Install NodeJS
       uses: actions/setup-node@v2-beta
-      with:
+      with: 
         node-version: 12
-    
-    - uses: borales/actions-yarn@v2.0.0
-      with:
-        cmd: install # will run `yarn install` command
-        
-    - name: Build React App
-      run: yarn build
-      
     - name: Install Surge
-      run: npm install --global surge
-
-    - name: Deploy to Surge
-      run: surge ./build umair-expense-tracker.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+      run: npm install -g surge
+    - name: Run Surge
+      run: surge ./ umair-expense-tracker.surge.sh --token ${{secrets.SURGE_TOKEN}}
