--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "animated-number-react": "^0.1.2",
     "chart.js": "^2.9.4",
+    "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.2",
